hello world example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ find_package(fmt REQUIRED)
 
 add_executable(${PROJECT_NAME} src/main.cpp)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Boost::headers)
+target_link_libraries(${PROJECT_NAME} PRIVATE Boost::headers fmt::fmt)
 
 install(TARGETS ${PROJECT_NAME} RUNTIME)
